--- a/lidar_msgs/package.xml
+++ b/lidar_msgs/package.xml
@@ -1,38 +1,27 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lidar</name>
+  <name>lidar_msgs</name>
   <version>0.0.0</version>
-  <description>The lidar package</description>
+  <description>The lidar_msgs package</description>
   <maintainer email="ohm@todo.todo">ohm</maintainer>
 
   <license>TODO</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
 
+
+  <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
-
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
-  <depend>roslaunch</depend>
-  <depend>gazebo</depend>
-  <depend>urdf</depend>
-  <depend>xacro</depend>
-  <depend>rviz</depend>
-
-
-  <!-- <exec_depend>geometry_msgs</exec_depend>
-  <build_depend>geometry_msgs</build_depend> -->
-
+  <exec_depend>std_msgs</exec_depend>
 
   <export>
 
